// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormRow /> should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="row-item"
    />
  </div>
</DocumentFragment>
`;

exports[`<FormRow /> with className: value should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="custom-row"
  >
    <div
      class="row-item"
    />
  </div>
</DocumentFragment>
`;

exports[`<FormRow /> with cols: value should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="gap-3 sm:grid sm:grid-cols-6 lg:grid-cols-12"
  >
    <div
      class="row-item"
    />
  </div>
</DocumentFragment>
`;

exports[`<FormRow /> with colsSm: value should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="gap-3 sm:grid sm:grid-cols-4 lg:grid-cols-6"
  >
    <div
      class="row-item"
    />
  </div>
</DocumentFragment>
`;

exports[`<FormRow /> with reverse: true should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class=""
    style="direction: rtl;"
  >
    <div
      class="row-item"
    />
  </div>
</DocumentFragment>
`;
